Revision history for Perl extension AnyEvent.

TODO: maybe support "peerip" verificstion, i.e. getpeername diretcly as
additional peername?

	- do not attempt to linger when there is no longer a valid fh.
        - enforce tls mode to be either accept or connect, do not simply
          segfault in Net::SSLeay.

4.86 Mon Jul 20 23:52:29 CEST 2009
	- since the verbose warning is not enough, explicitly document
          that versions before 1.33 of Net::SSLeay are not secure.
	- work around signal handling races in Event and (...) Event::Lib.
        - try to align signal-race timer to full-second boundaries.
        - work around Tk not liking negative timeouts.
        - don't complain of different grades of environmental unfriendlyness
          in IO::ASync.

4.85 Sat Jul 18 06:16:14 CEST 2009
        - nail the signal race problem in perl once and for all
          (see $AnyEvent::MAX_SIGNAL_LATENCY).
        - take advantage of Async::Interrupt if it is available.
        - load Time::HiRes and Guard modules on demand only.
        - add optional/recommended modules section to AnyEvent
          documentation.
        - reduce memory usage considerably (and reduce startup penalty)
          by not using "strict", "warnings" and "overload" modules.
        - work around buggy windows/openbsd perls and provide EBADMSG
          and EPROTO ourselves when missing.
	- improve perl 5.6 compatibility of the core event loop.
        - made Net::SSLeay version 1.33 a soft requirement.

4.83 Fri Jul 17 16:56:26 CEST 2009
	- implement AnyEvent::Socket::getprotobyname.
	- AnyEvent::CondVar's will now detect recursive blocking
          waits and will croak, as too many people fall into
          this trap.
        - AnyEvent::Handle will now call ->destroy on itself after
          executing the on_error callback, instead of doing some
          half-baked internal shutdown, for fatal errors.
        - clarify on_eof behaviour w.r.t. the read queue and